initial kotlin solution